--- a/FUNDACOMPROG PROJ/FUNDACOMPROG PROJ.vbproj
+++ b/FUNDACOMPROG PROJ/FUNDACOMPROG PROJ.vbproj
@@ -132,6 +132,12 @@
     <Compile Include="Form16.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form17.Designer.vb">
+      <DependentUpon>Form17.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form17.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form2.Designer.vb">
       <DependentUpon>Form2.vb</DependentUpon>
     </Compile>
@@ -236,6 +242,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form16.resx">
       <DependentUpon>Form16.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form17.resx">
+      <DependentUpon>Form17.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.vb</DependentUpon>
@@ -342,6 +351,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\loadlog %288%291.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\loadlog %289%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
